[feat] Add crew list

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -50,7 +50,7 @@
       [ngClass]="{ 'button-invalid': form.invalid }"
       [disabled]="form.invalid"
     >
-      Sign Up
+      Log in
     </button>
   </div>
 </form>
