--- a/src/app/main-page/agents/create-agent/create-agent.component.html
+++ b/src/app/main-page/agents/create-agent/create-agent.component.html
@@ -54,11 +54,11 @@
     <div class="form-group">
       <label for="tool">Tool</label>
       <select id="tool" formControlName="tool">
-        <option value="some_tool1">Some Tool 1</option>
-        <option value="some_tool2">Some Tool 2</option>
-        <option value="some_tool3">Some Tool 3</option>
-        <option value="some_tool4">Some Tool 4</option>
-        <option value="some_tool5">Some Tool 5</option>
+        <option value="some_tool1">crewAI Tool 1</option>
+        <option value="some_tool2">crewAI Tool 2</option>
+        <option value="some_tool3">crewAI Tool 3</option>
+        <option value="some_tool4">crewAI Tool 4</option>
+        <option value="some_tool5">crewAI Tool 5</option>
       </select>
     </div>
 
