--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -48,6 +48,15 @@
       <i class="fas fa-plus-circle"></i> Create Crew
     </button>
   </div>
-
-  <router-outlet></router-outlet>
+  <div class="main-page-container" *ngIf="crewId">
+    <div class="navigation-tabs">
+      <a [routerLink]="['/crew', crewId, 'agents']" routerLinkActive="active"
+        >Agents</a
+      >
+      <a [routerLink]="['/crew', crewId, 'tasks']" routerLinkActive="active"
+        >Tasks</a
+      >
+    </div>
+    <router-outlet></router-outlet>
+  </div>
 </div>
