--- a/src/app/main-page/agents/table-agents/table-agents.component.html
+++ b/src/app/main-page/agents/table-agents/table-agents.component.html
@@ -69,9 +69,11 @@
 </div>
 
 <div class="buttons-container">
-  <button class="add-agent-btn" (click)="navigateToAddAgent()">Add Agent</button>
+  <button class="add-agent-btn" (click)="navigateToAddAgent()">
+    Add Agent
+  </button>
   <button *ngIf="agents.length > 0" class="save-btn" (click)="saveAgents()">
-    Save
+    Update Crew
   </button>
 </div>
 
