--- a/src/app/main-page/tasks/add-task/add-task.component.html
+++ b/src/app/main-page/tasks/add-task/add-task.component.html
@@ -1,7 +1,8 @@
 <div class="modal-container">
   <div class="modal-content">
     <div class="modal-header">
-      <h2><i class="fas fa-tasks"></i> Add New Task</h2>
+      <h2>Add New Task</h2>
+      <i class="fas fa-tasks"></i>
       <button class="close-btn" (click)="closeModal()">✖</button>
     </div>
 
